# fireflyframework-genai

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-ci.yml  desktop.yml  nightly.yml  pr-gate.yml  release.yml
docs/: README.md  agents.md  api-reference.md  architecture.md  comparison-vs-qmd.md  content.md  embeddings.md  experiments.md  explainability.md  exposure-queues.md  exposure-rest.md  input-output-nodes.md  lab.md  memory.md  observability.md  pipeline.md  project-api.md  prompts.md  reasoning.md  scheduling.md  security.md  studio-agents.md  studio.md  templates.md  tools.md  tunnel-exposure.md  tutorial-bpm-pipeline.md  tutorial.md  use-case-corpus-search.md  use-case-idp.md  use-case-kg-ingest.md  validation.md  vectorstores.md
examples/: .env.template  README.md  _common.py  basic_agent.py  batch_processing.py  cached_tool.py  circuit_breaker.py  classifier.py  conversation_export_import.py  conversational_memory.py  database_persistence.py  delegation_strategies.py  distributed_tracing.py  extractor.py  full_integration.py  http_connection_pooling.py  idp_pipeline.py  idp_tools.py  incremental_streaming.py  mongodb_persistence.py  observability_usage.py  pipeline_branching.py  prompt_caching.py  quota_management.py  reasoning_cot.py  reasoning_goal.py  reasoning_memory.py  reasoning_pipeline.py  reasoning_plan.py  reasoning_react.py  reasoning_reflexion.py  reasoning_tot.py  router.py  security_guards.py  studio_launch.py  summarizer.py  tool_timeout.py
examples/corpus_search/: __init__.py  __main__.py  agent.py  cli.py  corpus.py
scripts/: build_studio.py
src/fireflyframework_agentic/: __init__.py  _version.py  config.py  exceptions.py  logging.py  plugin.py
src/fireflyframework_genai/: __init__.py  _version.py  config.py  exceptions.py  logging.py  model_utils.py  plugin.py  types.py
studio-desktop/frontend-dist/: index.html
studio-desktop/pyinstaller/: entry_point.py  firefly_studio.spec  hook-fireflyframework_genai.py  rthook_disable_logfire.py
studio-desktop/src-tauri/: Cargo.toml  tauri.conf.json
studio-desktop/src-tauri/capabilities/: default.json
studio-desktop/src-tauri/icons/: icon.icns
studio-desktop/src-tauri/src/: main.rs
studio-frontend/: README.md  package-lock.json  package.json  vite.config.ts
studio-frontend/src/: app.css
tests/: README.md  conftest.py  test_config.py  test_core.py  test_logging.py  test_model_utils.py  test_plugin.py
tests/agents/: test_prompt_cache.py  test_rate_limit_retry.py  test_streaming_incremental.py
tests/benchmarks/: bench_http_pool.py  bench_streaming_latency.py
tests/corpus_search/: test_agent.py  test_answerer.py  test_benchmark_smoke.py  test_cli.py  test_corpus.py  test_e2e_real_llm.py  test_expander.py  test_hybrid.py  test_ingest_pipeline.py  test_ingest_with_real_vectorstore.py  test_ledger.py  test_query_path.py  test_reranker.py  test_retry.py
tests/graphstores/: test_protocol.py  test_sqlite_store.py  test_types.py
tests/integration/: SETUP.md  test_e2e_real_llm.py  test_full_integration.py  test_ingest_with_real_vectorstore.py  test_ingestion.py
tests/memory/: test_mongodb_store.py  test_postgres_store.py  test_sqlite_store.py
tests/observability/: test_quota_manager.py  test_trace_propagation.py
tests/performance/: bench_http_pool.py  bench_streaming_latency.py  test_bench_http_pool.py  test_bench_streaming_latency.py
tests/pipeline/: test_batch_step.py
tests/resilience/: test_circuit_breaker.py
tests/responsible_ai/: test_output_guard.py
tests/security/: test_azure.py  test_encryption.py  test_entra.py  test_prompt_guard.py  (+2 more)
(+845 files in other folders)
