[project]
name = "fireflyframework-genai"
version = "26.01.01"
description = "A GenAI metaframework built on Pydantic AI for building production-grade GenAI applications with agents, reasoning patterns, prompt engineering, observability, and more."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Firefly Software Solutions Inc" }
]
maintainers = [
    { name = "Firefly Software Solutions Inc" }
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["genai", "agents", "pydantic-ai", "llm", "reasoning", "observability", "framework"]
dependencies = [
    "pydantic-ai>=1.56.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
]

[project.optional-dependencies]
rest = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
]
kafka = [
    "aiokafka>=0.12.0",
]
rabbitmq = [
    "aio-pika>=9.5.0",
]
redis = [
    "redis>=5.2.0",
]
queues = [
    "fireflyframework-genai[kafka,rabbitmq,redis]",
]
postgres = [
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
]
mongodb = [
    "motor>=3.6.0",
    "pymongo>=4.10.0",
]
security = [
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
]
http = [
    "httpx>=0.28.0",
]
costs = [
    "genai-prices>=0.0.1",
]
all = [
    "fireflyframework-genai[rest,queues,postgres,mongodb,security,http,costs]",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.0.0",
    "testcontainers>=4.10.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
]

[project.urls]
Homepage = "https://fireflyframework.com/"
Documentation = "https://github.com/fireflyframework/fireflyframework-genai/tree/main/docs"
Repository = "https://github.com/fireflyframework/fireflyframework-genai"
Issues = "https://github.com/fireflyframework/fireflyframework-genai/issues"
Changelog = "https://github.com/fireflyframework/fireflyframework-genai/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TC"]
ignore = ["E501", "TC001", "TC002", "TC003", "UP040", "UP046", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["fireflyframework_genai"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests/**", "examples/**"]
reportAttributeAccessIssue = false
reportPossiblyUnboundVariable = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
