[package]
name = "firefly-studio-desktop"
version = "0.1.0"
edition = "2021"
description = "Firefly Studio desktop application"
authors = ["Firefly Software Solutions Inc"]
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
